devops/admin-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: admin-server
  name: admin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-server
  template:
    metadata:
      labels:
        app: admin-server
    spec:
      containers:
        - image: mousse2025/admin-server:latest
          name: admin-server
          ports:
            - containerPort: 9090
          resources:
            limits:
              memory: "536870912"
      restartPolicy: Always
