devops/customers-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: customers-service
  name: customers-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers-service
  strategy: {}
  template:
    metadata:
      labels:
        app: customers-service
    spec:
      containers:
        - image: mousse2025/customers-service:latest
          name: customers-service
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: "536870912"
      restartPolicy: Always
