devops/discovery-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: discovery-server
  name: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  strategy: {}
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
        - image: mousse2025/discovery-server:latest
          name: discovery-server
          ports:
            - containerPort: 8761
          resources:
            limits:
              memory: "536870912"
      restartPolicy: Always
