devops/tracing-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tracing-server
  name: tracing-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracing-server
  strategy: {}
  template:
    metadata:
      labels:
        app: tracing-server
    spec:
      containers:
        - env:
            - name: JAVA_OPTS
              value: -XX:+UnlockExperimentalVMOptions -Djava.security.egd=file:/dev/./urandom
          image: openzipkin/zipkin:latest
          name: tracing-server
          ports:
            - containerPort: 9411
          resources:
            limits:
              memory: "536870912"
      restartPolicy: Always
