devops/config-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: config-server
  name: config-server
spec:
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
  selector:
    app: config-server
