devops/customers-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: customers-service
  name: customers-service
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
      protocol: TCP
  type: NodePort
  selector:
    app: customers-service
