devops/tracing-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tracing-server
  name: tracing-server
spec:
  ports:
    - name: "9411"
      port: 9411
      targetPort: 9411
  selector:
    app: tracing-server
