devops/vets-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vets-service
  name: vets-service
spec:
  ports:
    - name: "8083"
      port: 8082
      targetPort: 8082
      protocol: TCP
  selector:
    app: vets-service
