devops/visits-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: visits-service
  name: visits-service
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
      protocol: TCP
  selector:
    app: visits-service
