devops/customers-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  name: customers-service-ingress
  labels:
    app: customers-service
spec:
  ingressClassName: alb
  rules:
  -  http:
      paths:
      - pathType: ImplementationSpecific
        path: /api/gateway(/|$)(.*)
        backend:
          service:
            name: customers-service
            port:
              number: 8081
      - pathType: ImplementationSpecific
        path: /api/customer(/|$)(.*)
        backend:
          service: 
            name: customers-service
            port:
              number: 8081
