devops/visits-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  name: visits-service-ingress
  labels:
    app: visits-service24778
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /api/visit(/|$)(.*)
        backend:
          service:
            name: visits-service
            port:
              number: 8082
